BARC UAT/src/objects/Cluster__c.object
<CustomObject>
    <fields>
        <fullName>Address_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Master</label>
        <referenceTo>Address_Master__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_end__c</fullName>
        <label>Head end</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCO_Code__c</fullName>
        <label>LCO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Operator</label>
        <referenceTo>Local_Operator__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Operator__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sampling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sampling</label>
        <referenceTo>Sampling__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician No</label>
        <referenceTo>Operator_Technician__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Town_Village__c</fullName>
        <label>Town Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USB_Hub_Installed__c</fullName>
        <label>USB Hub Installed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cluster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operator__c</columns>
        <columns>Sampling__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cluster No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>